Add footer with TikTok attribution
Added footer with TikTok link and attribution.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
             <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
             Browser kamu tidak mendukung audio.
         </audio> 
-
-        <!-- Subtitle -->
+        <!-- Akun Editor -->
+	<div class="footer">
+		Made by
+		<a href="https://www.tiktok.com/@Ovidio_Guzman" target="_blank" rel="noopener">
+			TikTok: @Ovidio_Guzman
+		</a>
+		ðŸ’–
+    </div>
+        
+          <!-- Subtitle -->
         <div id="subtitle">Subtitle akan muncul di sini</div>
     </div>
 
