Update title in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Pemutar Lagu + Subtitle</title>
+<title>Lagu ini untukmu</title>
 
 <style>
 body {
