--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Lagu ini untukmu</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -16,131 +17,141 @@
 body {
     font-family: 'Poppins', sans-serif;
     overflow: hidden;
+    background: black;
 }
 
-/* VIDEO BACKGROUND ANIME */
+/* BACKGROUND VIDEO ANIME (BISA DIGANTI LINK) */
 .bg-video {
     position: fixed;
     inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: blur(3px) brightness(0.35);
-    animation: zoom 20s infinite alternate ease-in-out;
+    filter: blur(2.5px) brightness(0.35);
     z-index: -2;
 }
 
-@keyframes zoom {
-    from { transform: scale(1); }
-    to { transform: scale(1.08); }
-}
-
-/* OVERLAY */
+/* OVERLAY GELAP */
 .overlay {
     position: fixed;
     inset: 0;
-    background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0.2));
+    background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(0,0,0,0.3));
     z-index: -1;
 }
 
+/* CONTAINER */
 .container {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     color: white;
+    padding: 30px 15px;
     text-align: center;
 }
 
+/* JUDUL */
 h1 {
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: 2px;
-    margin-bottom: 15px;
+    opacity: 0.9;
 }
 
-/* BUTTON */
-.controls button {
-    background: rgba(255,255,255,0.1);
-    border: 1px solid rgba(255,255,255,0.4);
-    color: white;
-    padding: 10px 20px;
-    margin: 5px;
-    border-radius: 20px;
-    cursor: pointer;
-    backdrop-filter: blur(6px);
+/* SUBTITLE (DIPERBESAR) */
+#subtitle {
+    font-size: 30px;
+    font-weight: 500;
+    min-height: 42px;
+    margin-bottom: 25px;
+    opacity: 0;
+    transition: opacity 0.6s ease;
+    text-shadow:
+        0 0 12px rgba(255,255,255,0.6),
+        0 0 30px rgba(255,255,255,0.35);
 }
 
-.controls button:hover {
-    background: white;
-    color: black;
+/* PLAYER CARD (SPOTIFY STYLE) */
+.player {
+    width: 320px;
+    background: rgba(255,255,255,0.12);
+    backdrop-filter: blur(10px);
+    border-radius: 18px;
+    padding: 20px;
 }
 
-/* PROGRESS */
+/* PROGRESS BAR */
 .progress {
-    width: 280px;
+    width: 100%;
     height: 4px;
-    background: rgba(255,255,255,0.2);
-    margin-top: 18px;
+    background: rgba(255,255,255,0.25);
     border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 15px;
 }
 
 .progress-bar {
     height: 100%;
     width: 0%;
     background: white;
-    border-radius: 5px;
 }
 
-/* SUBTITLE VIRAL */
-#subtitle {
-    position: absolute;
-    bottom: 120px;
+/* CONTROL */
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.play-btn {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background: white;
+    color: black;
     font-size: 22px;
-    min-height: 32px;
-    opacity: 0;
-    transition: opacity 0.6s ease-in-out;
-    text-shadow:
-        0 0 10px rgba(255,255,255,0.6),
-        0 0 25px rgba(255,255,255,0.3);
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.play-btn:hover {
+    transform: scale(1.1);
 }
 
 /* CREDIT */
 .credit {
-    position: absolute;
-    bottom: 15px;
     font-size: 11px;
     opacity: 0.6;
+    line-height: 1.5;
 }
 </style>
 </head>
 
 <body>
 
+<!-- GANTI LINK VIDEO ANIME DI SINI -->
 <video class="bg-video" autoplay muted loop playsinline>
-    <source src="https://cdn.pixabay.com/video/2023/06/10/168148-835862698_large.mp4" type="video/mp4">
+    <source src="https://b.top4top.io/m_3635xr57z0.mp4" type="video/mp4">
 </video>
 
 <div class="overlay"></div>
 
 <div class="container">
+
     <h1>Pemutar Lagu</h1>
 
-    <audio id="audio">
-        <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
-    </audio>
-
-    <div class="controls">
-        <button onclick="playAudio()">▶ Play</button>
-        <button onclick="pauseAudio()">⏸ Pause</button>
-        <button onclick="restartAudio()">⏮ Restart</button>
-    </div>
-
-    <div class="progress">
-        <div class="progress-bar" id="progressBar"></div>
-    </div>
-
     <div id="subtitle"></div>
+
+    <div class="player">
+        <div class="progress">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
+
+        <div class="controls">
+            <button class="play-btn" id="playBtn">▶</button>
+        </div>
+    </div>
 
     <div class="credit">
         Dibuat oleh: Vigoo <br>
@@ -149,17 +160,16 @@ h1 {
     </div>
 </div>
 
+<audio id="audio">
+    <!-- GANTI LINK LAGU DI SINI -->
+    <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
+</audio>
+
 <script>
 const audio = document.getElementById("audio");
+const playBtn = document.getElementById("playBtn");
 const subtitle = document.getElementById("subtitle");
 const progressBar = document.getElementById("progressBar");
-
-function playAudio() { audio.play(); }
-function pauseAudio() { audio.pause(); }
-function restartAudio() {
-    audio.currentTime = 0;
-    audio.play();
-}
 
 const subtitles = [
     { time: 0.0, text: "Lantas mengapa ku masih menaruh hati" },
@@ -175,15 +185,25 @@ const subtitles = [
 
 let lastSubtitle = "";
 
-audio.addEventListener("timeupdate", () => {
-    const currentTime = audio.currentTime;
+/* PLAY / PAUSE */
+playBtn.onclick = () => {
+    if (audio.paused) {
+        audio.play();
+        playBtn.textContent = "⏸";
+    } else {
+        audio.pause();
+        playBtn.textContent = "▶";
+    }
+};
 
+/* UPDATE */
+audio.addEventListener("timeupdate", () => {
     if (audio.duration) {
-        progressBar.style.width = (currentTime / audio.duration) * 100 + "%";
+        progressBar.style.width = (audio.currentTime / audio.duration) * 100 + "%";
     }
 
     for (let i = subtitles.length - 1; i >= 0; i--) {
-        if (currentTime >= subtitles[i].time) {
+        if (audio.currentTime >= subtitles[i].time) {
             if (lastSubtitle !== subtitles[i].text) {
                 lastSubtitle = subtitles[i].text;
                 subtitle.style.opacity = 0;
