--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<title>Lagu ini untukmu</title>
+<title>Ini Lagu Untukmu</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
 * {
@@ -20,22 +20,13 @@ body {
     background: black;
 }
 
-/* BACKGROUND VIDEO ANIME (BISA DIGANTI LINK) */
+/* VIDEO BACKGROUND */
 .bg-video {
     position: fixed;
     inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: blur(2.5px) brightness(0.35);
-    z-index: -2;
-}
-
-/* OVERLAY GELAP */
-.overlay {
-    position: fixed;
-    inset: 0;
-    background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(0,0,0,0.3));
     z-index: -1;
 }
 
@@ -44,27 +35,190 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
+    padding: 25px;
     color: white;
-    padding: 30px 15px;
-    text-align: center;
 }
 
-/* JUDUL */
-h1 {
-    font-weight: 400;
-    letter-spacing: 2px;
-    opacity: 0.9;
-}
-
-/* SUBTITLE (DIPERBESAR) */
+/* SUBTITLE */
 #subtitle {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: 500;
-    min-height: 42px;
-    margin-bottom: 25px;
+    margin-bottom: 28px;
+    min-height: 40px;
+    text-align: center;
     opacity: 0;
+    transition: opacity 0.5s ease;
+    text-shadow: 0 0 12px rgba(0,0,0,0.8);
+}
+
+/* PLAYER */
+.player {
+    width: 100%;
+    max-width: 360px;
+    background: rgba(0,0,0,0.55);
+    backdrop-filter: blur(10px);
+    border-radius: 18px;
+    padding: 18px;
+}
+
+/* PROGRESS */
+.progress {
+    width: 100%;
+    height: 4px;
+    background: rgba(255,255,255,0.25);
+    border-radius: 5px;
+    overflow: hidden;
+    margin-bottom: 14px;
+}
+
+.progress-bar {
+    height: 100%;
+    width: 0%;
+    background: #1DB954;
+}
+
+/* CONTROLS */
+.controls {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* PLAY BUTTON */
+.play-btn {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    border: none;
+    background: #1DB954;
+    color: black;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+/* VOLUME */
+.volume {
+    width: 120px;
+}
+
+.volume input {
+    width: 100%;
+}
+
+/* CREDIT */
+.credit {
+    margin-top: 12px;
+    font-size: 11px;
+    opacity: 0.6;
+    text-align: center;
+    line-height: 1.4;
+}
+</style>
+</head>
+
+<body>
+
+<!-- GANTI VIDEO ANIME DI SINI -->
+<video class="bg-video" autoplay loop muted playsinline>
+    <source src="https://b.top4top.io/m_3635xr57z0.mp4" type="video/mp4">
+</video>
+
+<div class="container">
+
+    <div id="subtitle"></div>
+
+    <div class="player">
+        <div class="progress">
+            <div class="progress-bar" id="progressBar"></div>
+        </div>
+
+        <div class="controls">
+            <button class="play-btn" id="playBtn">▶</button>
+
+            <div class="volume">
+                <input type="range" min="0" max="1" step="0.01" value="0.8" id="volume">
+            </div>
+        </div>
+    </div>
+
+    <!-- CREDIT -->
+    <div class="credit">
+        Made with ❤️ by Vigoo<br>
+        TikTok: @.ovidio_guzman
+    </div>
+
+</div>
+
+<audio id="audio">
+    <!-- GANTI LAGU DI SINI -->
+    <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+const audio = document.getElementById("audio");
+const playBtn = document.getElementById("playBtn");
+const subtitle = document.getElementById("subtitle");
+const progressBar = document.getElementById("progressBar");
+const volume = document.getElementById("volume");
+
+const subtitles = [
+    { time: 0.0, text: "Lantas mengapa ku masih menaruh hati" },
+    { time: 6.6, text: "Lantas mengapa ku masih menaruh hati" },
+    { time: 11.38, text: "Padahal kutahu kau telah terikat janji" },
+    { time: 16.55, text: "Keliru ataukah bukan tak tahu" },
+    { time: 22.25, text: "Lupakanmu tapi aku tak mau" },
+    { time: 28.05, text: "Pantaskah aku untuk menyimpan" },
+    { time: 35.47, text: "Karena bukan aku yang memilikimu" },
+    { time: 39.3, text: "Sanggup sampai kapankah ku tak tahu" },
+    { time: 44.4, text: "Akankah akal sehat menyadarkanku" }
+];
+
+let lastText = "";
+
+/* PLAY / PAUSE */
+playBtn.onclick = () => {
+    if (audio.paused) {
+        audio.play();
+        playBtn.textContent = "⏸";
+    } else {
+        audio.pause();
+        playBtn.textContent = "▶";
+    }
+};
+
+/* VOLUME */
+volume.oninput = () => {
+    audio.volume = volume.value;
+};
+
+/* UPDATE */
+audio.addEventListener("timeupdate", () => {
+    if (audio.duration) {
+        progressBar.style.width =
+            (audio.currentTime / audio.duration) * 100 + "%";
+    }
+
+    for (let i = subtitles.length - 1; i >= 0; i--) {
+        if (audio.currentTime >= subtitles[i].time) {
+            if (lastText !== subtitles[i].text) {
+                lastText = subtitles[i].text;
+                subtitle.style.opacity = 0;
+
+                setTimeout(() => {
+                    subtitle.textContent = subtitles[i].text;
+                    subtitle.style.opacity = 1;
+                }, 200);
+            }
+            break;
+        }
+    }
+});
+</script>
+
+</body>
+</html>    opacity: 0;
     transition: opacity 0.6s ease;
     text-shadow:
         0 0 12px rgba(255,255,255,0.6),
