Change title from 'Pemutar Lagu' to 'Ini Ada Lagu Untukmu'

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ audio.addEventListener("timeupdate", () => {
 
 <div class="container">
 
-    <h1>Pemutar Lagu</h1>
+    <h1>Ini Ada Lagu Untukmu</h1>
 
     <div id="subtitle"></div>
 
