--- a/index.html
+++ b/index.html
@@ -8,292 +8,136 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-    overflow: hidden;
-    background: black;
+body{
+    font-family:'Poppins',sans-serif;
+    background:black;
+    overflow:hidden;
 }
 
 /* VIDEO BACKGROUND */
-.bg-video {
-    position: fixed;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
+.bg-video{
+    position:fixed;
+    inset:0;
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    z-index:-1;
 }
 
 /* CONTAINER */
-.container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 25px;
-    color: white;
+.container{
+    height:100vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    color:white;
+    padding:20px;
 }
 
 /* SUBTITLE */
-#subtitle {
-    font-size: 28px;
-    font-weight: 500;
-    margin-bottom: 28px;
-    min-height: 40px;
-    text-align: center;
-    opacity: 0;
-    transition: opacity 0.5s ease;
-    text-shadow: 0 0 12px rgba(0,0,0,0.8);
+#subtitle{
+    font-size:34px;
+    font-weight:600;
+    text-align:center;
+    max-width:90%;
+    margin-bottom:45px;
+    opacity:0;
+    transition:opacity .6s ease;
+    text-shadow:
+        0 0 12px rgba(0,0,0,.8),
+        0 0 30px rgba(0,0,0,.6);
 }
 
 /* PLAYER */
-.player {
-    width: 100%;
-    max-width: 360px;
-    background: rgba(0,0,0,0.55);
-    backdrop-filter: blur(10px);
-    border-radius: 18px;
-    padding: 18px;
+.player{
+    width:320px;
+    background:rgba(0,0,0,.55);
+    backdrop-filter:blur(10px);
+    border-radius:22px;
+    padding:22px;
+    margin-top:-10px;
+    margin-bottom:70px;
 }
 
 /* PROGRESS */
-.progress {
-    width: 100%;
-    height: 4px;
-    background: rgba(255,255,255,0.25);
-    border-radius: 5px;
-    overflow: hidden;
-    margin-bottom: 14px;
+.progress{
+    width:100%;
+    height:4px;
+    background:rgba(255,255,255,.3);
+    border-radius:5px;
+    overflow:hidden;
+    margin-bottom:20px;
 }
 
-.progress-bar {
-    height: 100%;
-    width: 0%;
-    background: #1DB954;
+.progress-bar{
+    height:100%;
+    width:0%;
+    background:white;
 }
 
 /* CONTROLS */
-.controls {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.controls{
+    display:flex;
+    justify-content:center;
 }
 
-/* PLAY BUTTON */
-.play-btn {
-    width: 56px;
-    height: 56px;
-    border-radius: 50%;
-    border: none;
-    background: #1DB954;
-    color: black;
-    font-size: 22px;
-    cursor: pointer;
+/* PLAY BUTTON — SPOTIFY STYLE */
+.play-btn{
+    width:68px;
+    height:68px;
+    border-radius:50%;
+    border:2px solid rgba(255,255,255,.85);
+    background:black;
+    color:white;
+    font-size:26px;
+    cursor:pointer;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    box-shadow:0 10px 30px rgba(0,0,0,.6);
+    transition:
+        transform .25s ease,
+        box-shadow .25s ease,
+        background .25s ease;
 }
 
-/* VOLUME */
-.volume {
-    width: 120px;
+.play-btn:hover{
+    transform:scale(1.12);
+    background:#111;
+    box-shadow:0 14px 40px rgba(0,0,0,.8);
 }
 
-.volume input {
-    width: 100%;
+.play-btn:active{
+    transform:scale(0.95);
 }
 
 /* CREDIT */
-.credit {
-    margin-top: 12px;
-    font-size: 11px;
-    opacity: 0.6;
-    text-align: center;
-    line-height: 1.4;
+.credit{
+    position:absolute;
+    bottom:12px;
+    text-align:center;
+    font-size:11px;
+    opacity:.6;
+    line-height:1.4;
 }
 </style>
 </head>
 
 <body>
 
-<!-- GANTI VIDEO ANIME DI SINI -->
-<video class="bg-video" autoplay loop muted playsinline>
-    <source src="https://b.top4top.io/m_3635xr57z0.mp4" type="video/mp4">
-</video>
-
-<div class="container">
-
-    <div id="subtitle"></div>
-
-    <div class="player">
-        <div class="progress">
-            <div class="progress-bar" id="progressBar"></div>
-        </div>
-
-        <div class="controls">
-            <button class="play-btn" id="playBtn">▶</button>
-
-            <div class="volume">
-                <input type="range" min="0" max="1" step="0.01" value="0.8" id="volume">
-            </div>
-        </div>
-    </div>
-
-    <!-- CREDIT -->
-    <div class="credit">
-        Made with ❤️ by Vigoo<br>
-        TikTok: @.ovidio_guzman
-    </div>
-
-</div>
-
-<audio id="audio">
-    <!-- GANTI LAGU DI SINI -->
-    <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-const audio = document.getElementById("audio");
-const playBtn = document.getElementById("playBtn");
-const subtitle = document.getElementById("subtitle");
-const progressBar = document.getElementById("progressBar");
-const volume = document.getElementById("volume");
-
-const subtitles = [
-    { time: 0.0, text: "Lantas mengapa ku masih menaruh hati" },
-    { time: 6.6, text: "Lantas mengapa ku masih menaruh hati" },
-    { time: 11.38, text: "Padahal kutahu kau telah terikat janji" },
-    { time: 16.55, text: "Keliru ataukah bukan tak tahu" },
-    { time: 22.25, text: "Lupakanmu tapi aku tak mau" },
-    { time: 28.05, text: "Pantaskah aku untuk menyimpan" },
-    { time: 35.47, text: "Karena bukan aku yang memilikimu" },
-    { time: 39.3, text: "Sanggup sampai kapankah ku tak tahu" },
-    { time: 44.4, text: "Akankah akal sehat menyadarkanku" }
-];
-
-let lastText = "";
-
-/* PLAY / PAUSE */
-playBtn.onclick = () => {
-    if (audio.paused) {
-        audio.play();
-        playBtn.textContent = "⏸";
-    } else {
-        audio.pause();
-        playBtn.textContent = "▶";
-    }
-};
-
-/* VOLUME */
-volume.oninput = () => {
-    audio.volume = volume.value;
-};
-
-/* UPDATE */
-audio.addEventListener("timeupdate", () => {
-    if (audio.duration) {
-        progressBar.style.width =
-            (audio.currentTime / audio.duration) * 100 + "%";
-    }
-
-    for (let i = subtitles.length - 1; i >= 0; i--) {
-        if (audio.currentTime >= subtitles[i].time) {
-            if (lastText !== subtitles[i].text) {
-                lastText = subtitles[i].text;
-                subtitle.style.opacity = 0;
-
-                setTimeout(() => {
-                    subtitle.textContent = subtitles[i].text;
-                    subtitle.style.opacity = 1;
-                }, 200);
-            }
-            break;
-        }
-    }
-});
-</script>
-
-</body>
-</html>    opacity: 0;
-    transition: opacity 0.6s ease;
-    text-shadow:
-        0 0 12px rgba(255,255,255,0.6),
-        0 0 30px rgba(255,255,255,0.35);
-}
-
-/* PLAYER CARD (SPOTIFY STYLE) */
-.player {
-    width: 320px;
-    background: rgba(255,255,255,0.12);
-    backdrop-filter: blur(10px);
-    border-radius: 18px;
-    padding: 20px;
-}
-
-/* PROGRESS BAR */
-.progress {
-    width: 100%;
-    height: 4px;
-    background: rgba(255,255,255,0.25);
-    border-radius: 5px;
-    overflow: hidden;
-    margin-bottom: 15px;
-}
-
-.progress-bar {
-    height: 100%;
-    width: 0%;
-    background: white;
-}
-
-/* CONTROL */
-.controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.play-btn {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: none;
-    background: white;
-    color: black;
-    font-size: 22px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-}
-
-.play-btn:hover {
-    transform: scale(1.1);
-}
-
-/* CREDIT */
-.credit {
-    font-size: 11px;
-    opacity: 0.6;
-    line-height: 1.5;
-}
-</style>
-</head>
-
-<body>
-
-<!-- GANTI LINK VIDEO ANIME DI SINI -->
+<!-- VIDEO BACKGROUND -->
 <video class="bg-video" autoplay muted loop playsinline>
     <source src="https://b.top4top.io/m_3635xr57z0.mp4" type="video/mp4">
 </video>
 
-<div class="overlay"></div>
-
 <div class="container">
-
-    <h1>Ini Ada Lagu Untukmu</h1>
 
     <div id="subtitle"></div>
 
@@ -307,15 +151,15 @@ audio.addEventListener("timeupdate", () => {
         </div>
     </div>
 
-    <div class="credit">
-        Dibuat oleh: Vigoo <br>
-        TikTok: @.ovidio_guzman <br>
-        WhatsApp: 6289509082049
-    </div>
+</div>
+
+<!-- CREDIT -->
+<div class="credit">
+    Made with ❤️ by Vigoo<br>
+    TikTok: @.ovidio_guzman
 </div>
 
 <audio id="audio">
-    <!-- GANTI LINK LAGU DI SINI -->
     <source src="https://a.top4top.io/m_36341kguk0.mp3" type="audio/mpeg">
 </audio>
 
@@ -326,46 +170,44 @@ const subtitle = document.getElementById("subtitle");
 const progressBar = document.getElementById("progressBar");
 
 const subtitles = [
-    { time: 0.0, text: "Lantas mengapa ku masih menaruh hati" },
-    { time: 6.6, text: "Lantas mengapa ku masih menaruh hati" },
-    { time: 11.38, text: "Padahal kutahu kau telah terikat janji" },
-    { time: 16.55, text: "Keliru ataukah bukan tak tahu" },
-    { time: 22.25, text: "Lupakanmu tapi aku tak mau" },
-    { time: 28.05, text: "Pantaskah aku untuk menyimpan" },
-    { time: 35.47, text: "Karena bukan aku yang memilikimu" },
-    { time: 39.3, text: "Sanggup sampai kapankah ku tak tahu" },
-    { time: 44.4, text: "Akankah akal sehat menyadarkanku" }
+ { time: 0.0, text: "Lantas mengapa ku masih menaruh hati" },
+ { time: 6.6, text: "Lantas mengapa ku masih menaruh hati" },
+ { time: 11.38, text: "Padahal kutahu kau telah terikat janji" },
+ { time: 16.55, text: "Keliru ataukah bukan tak tahu" },
+ { time: 22.25, text: "Lupakanmu tapi aku tak mau" },
+ { time: 28.05, text: "Pantaskah aku untuk menyimpan" },
+ { time: 35.47, text: "Karena bukan aku yang memilikimu" },
+ { time: 39.3, text: "Sanggup sampai kapankah ku tak tahu" },
+ { time: 44.4, text: "Akankah akal sehat menyadarkanku" }
 ];
 
-let lastSubtitle = "";
+let lastText = "";
 
-/* PLAY / PAUSE */
 playBtn.onclick = () => {
-    if (audio.paused) {
+    if(audio.paused){
         audio.play();
-        playBtn.textContent = "⏸";
-    } else {
+        playBtn.textContent="⏸";
+    }else{
         audio.pause();
-        playBtn.textContent = "▶";
+        playBtn.textContent="▶";
     }
 };
 
-/* UPDATE */
-audio.addEventListener("timeupdate", () => {
-    if (audio.duration) {
-        progressBar.style.width = (audio.currentTime / audio.duration) * 100 + "%";
+audio.addEventListener("timeupdate",()=>{
+    if(audio.duration){
+        progressBar.style.width =
+            (audio.currentTime / audio.duration) * 100 + "%";
     }
 
-    for (let i = subtitles.length - 1; i >= 0; i--) {
-        if (audio.currentTime >= subtitles[i].time) {
-            if (lastSubtitle !== subtitles[i].text) {
-                lastSubtitle = subtitles[i].text;
-                subtitle.style.opacity = 0;
-
-                setTimeout(() => {
-                    subtitle.textContent = subtitles[i].text;
-                    subtitle.style.opacity = 1;
-                }, 200);
+    for(let i=subtitles.length-1;i>=0;i--){
+        if(audio.currentTime >= subtitles[i].time){
+            if(lastText !== subtitles[i].text){
+                lastText = subtitles[i].text;
+                subtitle.style.opacity=0;
+                setTimeout(()=>{
+                    subtitle.textContent=subtitles[i].text;
+                    subtitle.style.opacity=1;
+                },200);
             }
             break;
         }
